# lib/db/src/schema/index.ts
@@ -2,3 +2,5 @@ export * from "./services";
 export * from "./appointments";
 export * from "./tracking";
 export * from "./food";
+export * from "./conversations";
+export * from "./messages";
